Fixed Layout Issues
- Landing, About, Create Pages
- There might be some hierarchy stuff going on with <header>

--- a/Frontend/Styles/create.css
+++ b/Frontend/Styles/create.css
@@ -12,7 +12,7 @@
 section {
     position: relative;
     min-height: 100vh;
-    background-image: url(../Pictures/bg3.jpg);
+    background-image: url(../Pictures/bg3.png);
     background-size: cover;
     background-position: top;
     display: flex;
@@ -21,7 +21,7 @@ section {
 }
 
 /* Create box (Sign in/ups) */
-section .account {
+section .main {
     height: 550px;
     width: 500px;
     opacity: 87%;
@@ -46,14 +46,14 @@ section h1 {
     font-size: 22px;
 }
 
-section .account input {
+section .main input {
     width: 90%;
     margin-bottom: 20px;
     margin-left: 14.9px;
 }
 
 /* 5 input bars (Fname / Lname / E-mail / PW / Confirm) */
-section .account input[type="fname"], input[type="lname"], [type="email"], input[type="password"] {
+section .main input[type="fname"], input[type="lname"], [type="email"], input[type="password"] {
     color: black;
     border: none;
     height: 37px;
@@ -64,7 +64,7 @@ section .account input[type="fname"], input[type="lname"], [type="email"], input
 }
 
 /* Create button */
-section .account input[type="submit"] {
+section .main input[type="submit"] {
     border: none;
     outline: none;
     height: 40px;
@@ -75,21 +75,22 @@ section .account input[type="submit"] {
     border-radius: 20px;
 }
 
-section .account input[type="submit"]:hover {
+section .main input[type="submit"]:hover {
     background: pink;
 }
 
 /* Sign in instead */
-section .account button {
+section .main a {
     text-decoration: none;
     font-size: 16px;
     margin-left: 14.9px;
     line-height: 20px;
     color: #000;
-    outline: none;
-    border: none;
 }
 
-section .account button:hover {
+section .main a:hover {
     color: pink;
 }
+
+
+
