--- a/graph_theorists_sketchpad/src/styles/about.css
+++ b/graph_theorists_sketchpad/src/styles/about.css
@@ -1,3 +1,4 @@
+/* Global Font */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"); *
 
 {
@@ -7,6 +8,7 @@
     font-family: 'Montserrat', sans-serif;  
 }
 
+/* Background Settings */
 section {
     position: relative;
     min-height: 100vh;
@@ -18,8 +20,8 @@ section {
     align-items: center;
 }
 
-/* Directory Positions (Home, About, Team) */
-section .dir {
+/* Directory Positions (Home, About) */
+section .dir2 {
     position: absolute;
     top: 30px;
     left: 110px;
@@ -27,29 +29,35 @@ section .dir {
 }
 
 /* Gets rid of the dots in Directory */
-/* section .dir li {
+section .dir2 button {
     list-style: none;
-} */
+}
 
 /* Directory Settings */
-/* section .dir li a {
+section .dir2 button {
+    top: 30px;
+    left: 110px;
+    display: flex;
     text-decoration: none;
     color: #fff;
     margin-right: 30px;
     font-size: 1.5em;
     font-weight: 755;
-} */
+    background-color: transparent;
+    outline: none;
+    border: none;
+}
 
-/* section .dir li a:hover {
+section .dir2 button:hover {
     color: pink;
-} */
+}
 
 /* Info box */
 section .about {
     height: 500px;
     width: 1000px;
     padding: 80px 70px;
-    opacity: 83%;
+    opacity: 87%;
     overflow: hidden;
     background: #fff ;
     top: 47%;
@@ -61,12 +69,12 @@ section .about {
 }
 
 /* Our Purpose header */
-section h1 {
+section h4 {
     color: skyblue;
     font-size: 2em;
     font-weight: 1000;
-    margin-top: -12%;
-    margin-left: -17%;
+    margin-top: -9%;
+    margin-left: -7%;
 }
 
 /* Paragraph */
@@ -75,7 +83,7 @@ section .about p {
     color: black;
     font-size: 1.2em;
     font-weight: 500;
-    margin-top: -.25%;
+    margin-top: 1%;
     margin-left: -7%;
 }
 
@@ -89,7 +97,7 @@ section .meme {
 section .team {
     height: 92px;
     width: 1000px;
-    opacity: 83%;
+    opacity: 87%;
     overflow: hidden;
     background: #fff ;
     top: 83%;
@@ -157,13 +165,3 @@ section .avatar5 {
     top: 10%;
     left: 85%
 }
-
-
-
-
-
-
-
-
-
-
